# ExcellentCaseExpert

./: .gitignore  Makefile  README.md  build_config.py  config.json  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  test.yml
docs/: llm_configuration.md
examples/: llm_config_example.py
src/: __init__.py  main.py
src/generators/: __init__.py  case_optimizer.py  test_case_generator.py
src/interfaces/: base_interfaces.py
src/models/: data_models.py
src/parsers/: __init__.py  document_processor.py
src/services/: __init__.py
src/services/config/: __init__.py  config_manager.py
src/services/export/: __init__.py  json_exporter.py
src/services/llm/: __init__.py  llm_service.py
src/services/ocr/: __init__.py  ocr_service.py
src/ui/: __init__.py  file_upload_widget.py  main_window.py  processing_thread.py  progress_widget.py  settings_dialog.py  test_case_display_widget.py
src/utils/: __init__.py  config_helper.py  constants.py  error_handler.py  ux_optimizer.py
